# GrapheneLang

./: .gitattributes  .gitignore  .pylintrc  bootstrap.sh  bug.c3  codegen.py  demo.c3  driver.py  errors.py  glang  glang.spec  grammar.lark  graphene_parser.py  hatch_build.py  heap_arrays.c3  parser.py  pyproject.toml  requirements.txt  target.py  types_overview.md
.github/: dependabot.yml
.github/workflows/: graphene_tests.yml  lint.yml  python-app.yml
codegen/: __init__.py  builtin_callables.py  builtin_types.py  expressions.py  generatable.py  interfaces.py  strings.py  translation_unit.py  type_conversions.py  type_resolution.py  user_facing_errors.py
docs/: releases.md  types_overview.md
lib/std/: type_traits.c3
parser/: file_info.c3  lexer_parser.py  parser.c3  self_hosted_parser.py  syntax_tree.c3
parser/bootstrap/: grammar.lark  lark_parser.py
src/glang/: driver.py  graphene_parser.py  target.py
src/gls/: ring_buffer.c3  server.c3
src/lsp-server/: ring_buffer.c3  server.c3
std/: algorithm.c3  algorithms.c3  arithmetic.c3  assert.c3  assignments.c3  fcntl.c3  format.c3  io.c3  iterators.c3  json.c3  logical.c3  math.c3  memory.c3  runtime.S  string.c3  syscalls.c3  type_traits.c3  unistd.c3  util.c3  vector.c3  wrappers.c3
std/aarch64_linux/: runtime.S  syscalls.c3
std/arm_linux/: runtime.S
std/sys/: enums.c3  mman.c3  types.c3  uio.c3
std/x86_64_linux/: runtime.S  syscalls.c3
targets/: arm_linux.yml  x86_64_linux.json
tests/: run_tests.py  schema.py  test_config_grammar.lark  test_config_parser.py  v2_grammar.lark  v2_parser.py
tests/algorithms/: bisect_left.c3
tests/ambiguous_function_call/: main.c3  test.json
tests/array_assignments/: main.c3
tests/arrays/: alignment.c3  alignment_aarch64_linux.c3  alignment_x86_64_linux.c3  array_assignments.c3  array_expression.c3  bad_dimensions.c3  correct_initialization.c3  heap_array_access.c3  initialization_with_wrong_length.c3  initialization_with_wrong_type.c3  late_initialization.c3  md_heap_array.c3  unborrowed_heap_array.c3
tests/assignments/: assignment_plus_equals.c3  to_borrowed_reference.c3
tests/builtin_alignof/: main.c3  test.json
tests/builtin_arithmetic/: main.c3  test.json
tests/builtin_callables/: alignof.c3  arithmetic.c3  narrow.c3  sizeof.c3  trap.c3  unreachable.c3  volatile.c3
tests/builtin_narrow/: main.c3  test.json
tests/constants/: for_loop_mut_reference.c3  for_loop_non_mut_reference.c3  function_return_assignment.c3  heap_array_error_formatting.c3  let_assignment.c3  let_borrow.c3  let_borrow_mut.c3  let_with_no_rhs.c3  mut_heap_array.c3  mut_ref_used_in_place_of_ref.c3  mutable_ref.c3  ref_used_in_place_of_mut_ref.c3  struct_assignment.c3  struct_mut_ref_assignment.c3  struct_ref_assignment.c3  ufcs.c3
tests/control_flow/: break.c3  break_outside_a_loop.c3  continue.c3  continue_outside_a_loop.c3  for.c3  if_else.c3  nested_while_statement.c3  while_statement.c3
tests/debug/: basic.c3  variables.c3
tests/duplicate_generics/: main.c3  test.json
tests/duplicate_type_specialization/: main.c3  test.json
tests/floating_point/: arithmetic.c3  basic_use.c3  constant_parsing.c3  subnormal_literal.c3  supernormal_literal.c3
tests/function_without_return/: test.json
tests/generic_functions/: basic_specialization.c3  deduction_failure.c3  dont_match_heap_arrays_to_references.c3  generic_deduction_ignores_initializer_list.c3  implicit_conversion_after_specialization.c3  match_reference_through_alias.c3  numeric_lookup_error.c3  partial_specialization.c3  partial_specialization_conflicting_types.c3  sfinae.c3  sfinae_ambiguous.c3  sfinae_implicit.c3  specialization_with_generic_argument.c3  substitution_failure_inline.c3  substitution_impossible.c3
tests/generic_types/: basic_usage.c3  duplicate_generic_parameters.c3  duplicate_type_specialization.c3  nested_generic_annotations.c3  numeric_lookup_error.c3  specialization_count_error.c3  specialization_with_generic_argument.c3  specializations.c3
tests/generics_parsing/: main.c3  test.json
tests/generics_with_generic_annotations/: main.c3  test.json
tests/json/: array_comma_after_close.c3  array_extra_comma.c3  echo.c3  object_empty_key.c3  string_allowed_escapes.c3  string_incomplete_escape.c3  string_unescaped_tab.c3
tests/logical_operators/: and.c3  chained.c3  not.c3  or.c3  short_circuit.c3
tests/main_return_type/: invalid.c3  valid.c3
tests/misc/: ambiguous_function_call.c3  arguments_are_mutable.c3  array_assignments.c3  array_bad_dimensions.c3  fork.c3  function_without_return.c3  generic_type_with_int_parameter.c3  manual_iterators.c3  operator_parsing.c3  order_of_operations.c3  overload_resolution_does_not_dereference.c3  process_args.c3  recursive_types.c3  recursive_types_unresolvable.c3  reference_borrowing.c3  reference_nesting.c3  reference_overloading.c3  simple_typedef.c3  string_constants.c3  subexpression_ordering.c3  syntax_error_inline.regressed  syntax_error_overlineline.c3  syntax_error_overlineline.regressed  ufcs_call.c3  ufcs_call_on_value_type.c3  unary_operators.c3  undeclared_variable.c3  uninitialized_variable_usage.c3  variable_assignments.c3
tests/modules/: circular_imports.c3
tests/order_of_operation/: main.c3  test.json
tests/overload_resolution_avoids_integer_promotion/: main.c3  test.json
tests/parameter_packs/: lookup_error.c3  nested_scopes.c3  pack_length.c3
tests/reference_borrowing/: main.c3  test.json
tests/reference_nesting/: test.json
tests/reference_overloading/: main.c3  test.json
tests/references/: function_return.c3  function_return_bad_ref.c3  function_return_bad_ref_stack.c3  function_return_without_borrow.c3
tests/regressions/: alias_pattern_matching.c3  alias_to_reference_type.c3  ambiguous_parsing.c3  array_type_mangling.c3  borrowed_array_indexing.c3  borrowed_struct_indexing.c3  builtin_redefinition.c3  di_struct_offset.c3  equivalent_types.c3  error_in_return_type.c3  forwarding_numeric_generic_parameter.c3  indirect_alias_to_heap_array.c3  int_to_ptr_with_named_type.c3  lli_crt.c3  modulo_operator.c3  return_void.c3  (+15 more)
(+376 files in other folders)
